# papercast-zotero-subscriber

./: .gitignore  generate_stubs.py  setup.cfg
papercast_zotero/: __init__.py  subscribers.py  zotero_subscriber.py  zotero_types.py
