[metadata]
name = papercast_zotero
version = 0.1.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Zotero Subscriber Plugin for Papercast
url = https://github.com/papercast-dev/papercast-zotero-subscriber

[options]
packages = find:
install_requires =
    websockets
    pyzotero
    # Any dependencies required by the plugin

[options.entry_points]
papercast.subscribers =
    ZoteroSubscriber = papercast_zotero.zotero_subscriber:ZoteroSubscriber

papercast.types = 
    ZoteroOutput = papercast_zotero.zotero_types:ZoteroOutput

