[metadata]
name = papercast_zotero
version = 0.2.0
author = Gabriel Simmons
author_email = gabe@papercast.dev
description = Zotero Subscriber Plugin for Papercast
url = https://github.com/papercast-dev/papercast-zotero-subscriber

[options]
packages = find:
install_requires =
    websockets
    pyzotero
    # Any dependencies required by the plugin

[options.entry_points]
papercast.subscribers =
    ZoteroSubscriber = papercast_zotero.subscribers:ZoteroSubscriber

papercast.types = 
    ZoteroOutput = papercast_zotero.types:ZoteroOutput

